crates/eure-macros/tests/compile_fail/via_and_flatten_conflict.rs
use eure::FromEure;

#[derive(FromEure)]
struct Test {
    #[eure(via = "SomeType", flatten)]
    field: String,
}

fn main() {}
